<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/player_view"
            app:controller_layout_id="@layout/custom_controller"
            app:resize_mode="zoom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/exo_player_view_height">

        </com.google.android.exoplayer2.ui.PlayerView>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/description_margin_top"
            android:layout_marginLeft="@dimen/description_margin_left_right"
            android:layout_marginRight="@dimen/description_margin_left_right"
            tools:text="@string/dummy_description"
            style="@style/DescriptionTextStyle"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_layout_margin">

            <Button
                android:id="@+id/btn_previous"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_selector"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/button_margin"
                android:gravity="center"
                android:text="@string/btn_previous_text"
                style="@style/ButtonTextStyle"/>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_selector"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/button_margin"
                android:gravity="center"
                android:text="@string/btn_next_text"
                style="@style/ButtonTextStyle"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>